--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -4,9 +4,9 @@
   "type": "module",
   "version": "0.0.0",
   "bin": {
+    "oas-block-spec": "bin/block-spec.mjs",
     "oas-bundle-size": "bin/bundle-size.mjs",
     "oas-design-tokens": "bin/design-tokens.mjs",
-    "oas-flow-spec": "bin/flow-spec.mjs",
     "oas-lint": "bin/lint.sh"
   },
   "main": "src/index.mjs",
