update storybook to v10

--- a/apps/storybook/tsconfig.json
+++ b/apps/storybook/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig.app.json",
   "compilerOptions": {
+    "allowImportingTsExtensions": true,
     "paths": {
       "@optiaxiom/react": ["../../packages/react/src"],
       "@optiaxiom/react/unstable": ["../../packages/react/src/unstable.ts"]
