fix tsconfig path override
by actually pointing to dist/ for nextjs

for some reason it's doing a merge instead of a replace

--- a/apps/docs/tsconfig.next.json
+++ b/apps/docs/tsconfig.next.json
@@ -5,7 +5,10 @@
     "paths": {
       "@/components": ["components"],
       "@/components/*": ["components/*"],
-      "@/demos/*": ["demos/*"]
+      "@/demos/*": ["demos/*"],
+      "@optiaxiom/globals": ["../../packages/globals/dist"],
+      "@optiaxiom/react": ["../../packages/react/dist"],
+      "@optiaxiom/react/unstable": ["../../packages/react/dist/unstable"]
     }
   }
 }
