feat(storybook): add dark/light mode theme toggle
Add @storybook/addon-themes with withThemeByClassName decorator to enable
switching between light and dark mode across all stories.

--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-visually-hidden": "^1.2.3",
     "@storybook/addon-a11y": "^10.2.8",
     "@storybook/addon-designs": "^11.1.2",
+    "@storybook/addon-themes": "^10.2.10",
     "@storybook/addon-vitest": "^10.2.8",
     "@storybook/react-vite": "^10.2.8",
     "@tabler/icons-react": "^3.34.1",
