--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -73,6 +73,7 @@
     "@vanilla-extract/dynamic": "^2.1.5",
     "clsx": "^2.1.1",
     "downshift": "^9.0.10",
+    "jsonpointer": "^5.0.1",
     "react-day-picker": "^9.9.0",
     "react-remove-scroll": "^2.7.1",
     "react-resizable-panels": "^3.0.4",
