--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -8,7 +8,9 @@
     "postbuild": "pagefind --site .next/server/app --output-path out/_pagefind"
   },
   "devDependencies": {
+    "@dnd-kit/react": "^0.3.2",
     "@faker-js/faker": "^9.9.0",
+    "@monaco-editor/react": "^4.7.0",
     "@optiaxiom/react": "workspace:^",
     "@optiaxiom/shared": "workspace:^",
     "@radix-ui/react-visually-hidden": "^1.2.3",
