replace zod with @cfworker/json-schema in proteus

--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -10,7 +10,11 @@
     },
     "types": ["@testing-library/jest-dom"]
   },
-  "include": [".", "package.json"],
+  "include": [
+    ".",
+    "package.json",
+    "src/proteus-document/proteus-document-spec.json"
+  ],
   "exclude": ["dist", "lib", "node_modules"],
   "references": [{ "path": "../globals" }]
 }
