--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -35,6 +35,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@cfworker/json-schema": "^4.1.1",
     "@dnd-kit/collision": "^0.1.21",
     "@dnd-kit/helpers": "^0.1.21",
     "@dnd-kit/react": "^0.1.21",
@@ -77,8 +78,7 @@
     "react-day-picker": "^9.9.0",
     "react-remove-scroll": "^2.7.1",
     "react-resizable-panels": "^3.0.4",
-    "use-sync-external-store": "^1.5.0",
-    "zod": "^3.25.58"
+    "use-sync-external-store": "^1.5.0"
   },
   "devDependencies": {
     "@emotion/hash": "^0.9.2",
